ruoyi-vue-pro-master/script/k8s/hxy-governance/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: hxy-prod-core
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: hxy-prod-edge
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
